--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title of the Webpage</title>
+    <title>Colonia Tutors</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta chatset="utf-8" />
-    <script
+    <script>
       type="text/javascript"
       src="https://identity.netlify.com/v1/netlify-identity-widget.js"
-    ></script>
+    </script>
     <script type="text/javascript" src="./login.js"></script>
   </head>
   <body>
